Complete Phase 1 stabilization and security execution
- Updated runtime fingerprint with environment details and freeze window timestamps.
- Documented snapshot creation with artifact references and SHA-256 manifest updates.
- Recorded credential rotation outcomes, including new DB user and SMTP credential updates.
- Conducted smoke checks before and after credential rotation, noting results and issues.
- Executed recovery drill, validating restore process and smoke checks post-recovery.
- Compiled full execution transcript for Phase 1, detailing all actions and findings.
- Updated sign-off documentation with approval status and runtime gap details.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 __project__
 local/vendor
+phase1/artifacts/
+phase1/.secret-rotation.local.txt
+phase1/.cookies*.txt
+phase1/login-after.html
+phase1/login500.html
+local/storage/logs/*.log
