--- a/docker-compose.phase1a.yml
+++ b/docker-compose.phase1a.yml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - db
     ports:
-      - "8080:80"
+      - "${APP_PORT:-8081}:80"
     volumes:
       - ./:/var/www/html
 
