Implement Phase 2 configuration overhaul with centralized settings and runtime JSON support

--- a/local/.env.example
+++ b/local/.env.example
@@ -1,19 +1,41 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=cnA3UAZRa0RRWGeb1sGXWDWcqbRRxziI
+APP_NAME=Admin-Panel
+APP_LOCALE=en
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=db
+DB_DATABASE=admin_panel
+DB_USERNAME=app_adminpanel
+DB_PASSWORD=change_me
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.invalid
+MAIL_PORT=587
+MAIL_USERNAME=no-reply@admin-panel.invalid
+MAIL_PASSWORD=change_me
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@admin-panel.invalid
+MAIL_FROM_NAME="Admin Panel System"
+
+# Phase 2: env-driven compatibility keys (optional)
+AP_ENFORCE_COMPLETE_ENV=true
+AP_INSTALLED=1
+AP_DEFAULT_LANGUAGE=en
+AP_SMTP_SECURE=true
+
+# Feature flags
+AP_FEATURE_LET_REGISTER_USER=1
+AP_FEATURE_RECOVER_ACCOUNT=0
+AP_FEATURE_ACCOUNT_RECOVERY_AUTOMATIC=1
+AP_FEATURE_APPLY_GENERAL_SESSION_DURATION=1
+
+# Paths (optional overrides)
+AP_PATH_CLOUD_ROUTE=/storage/admin-panel/cloud/
+AP_PATH_TMP_FILES=/storage/admin-panel/tmp/
+AP_PATH_TERMS_FOLDER=/assets/js/__languages__/
+AP_PATH_AUDIO_NOTIFICATIONS_FOLDER=/assets/audio/notifications/
