--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __project__
 /\.env
 local/vendor
+local/storage/admin-panel/runtime-settings.json
 phase1/artifacts/
 phase1/.secret-rotation.local.txt
 phase1/.cookies*.txt
