Refactor environment and secret management for Phase 2 overhaul
Including untracking sensitive files, updating config contracts, and enhancing runtime settings handling.

--- a/local/.env.example
+++ b/local/.env.example
@@ -1,12 +1,12 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=cnA3UAZRa0RRWGeb1sGXWDWcqbRRxziI
+APP_KEY=change_me_32_characters
 APP_NAME=Admin-Panel
 APP_LOCALE=en
 
 DB_HOST=db
 DB_DATABASE=admin_panel
-DB_USERNAME=app_adminpanel
+DB_USERNAME=change_me
 DB_PASSWORD=change_me
 
 CACHE_DRIVER=file
