--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 __project__
 /\.env
+local/.env
 local/vendor
 local/storage/admin-panel/runtime-settings.json
+local/storage/admin-panel/legacy-settings.snapshot.php
 phase1/artifacts/
 phase1/.secret-rotation.local.txt
 phase1/.cookies*.txt
